# airi

./: Cargo.toml  README.md  package.json  pnpm-lock.yaml  turbo.json
apps/server/: package.json
apps/stage-pocket/: capacitor.config.ts  package.json
apps/stage-tamagotchi/: package.json
apps/stage-tamagotchi-tauri/: index.html  package.json  tsconfig.json  vite.config.ts
apps/stage-tamagotchi-tauri/src/: main.ts
apps/stage-tamagotchi-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/stage-tamagotchi-tauri/src-tauri/capabilities/: default.json
apps/stage-tamagotchi-tauri/src-tauri/src/: lib.rs  main.rs  types.rs
apps/stage-tamagotchi-tauri/src-tauri/src/commands/: app.rs  caption.rs  i18n.rs  mod.rs  notice.rs  screen.rs  streaming.rs  widgets.rs  window.rs
apps/stage-tamagotchi-tauri/src-tauri/src/windows/: fallback.rs  macos.rs  mod.rs  persistence.rs
apps/stage-tamagotchi-tauri/src-tauri/tests/: commands_compile.rs
apps/stage-tamagotchi-tauri/src/composables/: use-eventa.ts
apps/stage-tamagotchi-tauri/src/modules/: i18n.ts
apps/stage-tamagotchi-tauri/src/pages/: index.vue
apps/stage-tamagotchi/src/shared/: eventa.ts
docs/: package.json
docs/.vitepress/: config.ts
docs/content/ja/docs/overview/: index.md  (+2 more)
docs/content/zh-Hans/: index.md
integrations/vscode/airi-plugin-vscode/: package.json
integrations/vscode/vscode-airi/: package.json
nix/: pnpm-deps-hash.txt
openspec/changes/tauri-ipc-migration/: design.md  proposal.md  tasks.md
openspec/changes/tauri-nspanel-windows/: design.md  proposal.md  tasks.md
openspec/changes/tauri-renderer-migration/: design.md  proposal.md  tasks.md
openspec/changes/tauri-scaffold-core/: design.md  proposal.md  tasks.md
openspec/changes/tauri-screen-capture/: design.md  proposal.md  tasks.md
openspec/changes/tauri-system-integration/: design.md  proposal.md  tasks.md
plugins/airi-plugin-bilibili-laplace/: package.json
plugins/airi-plugin-claude-code/: package.json
plugins/airi-plugin-homeassistant/: package.json
plugins/airi-plugin-web-extension/: package.json
services/discord-bot/src/adapters/: airi-adapter.ts
services/minecraft/: .env  package.json
services/minecraft/src/: main.ts
services/minecraft/src/cognitive/: index.ts
services/minecraft/src/composables/: config.ts
services/twitter-services/: package.json
(+68 files in other folders)
